--- a/PanaderoApp/PanaderoApp.csproj
+++ b/PanaderoApp/PanaderoApp.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Controllers\IngredienteController.cs" />
     <Compile Include="Controllers\ProductosController.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
+    <Compile Include="Controllers\RecetasController.cs" />
     <Compile Include="Controllers\StockMovimientosController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Forms\AggUsuario.cs">
@@ -109,6 +110,12 @@
     <Compile Include="Forms\FrmProveedores.Designer.cs">
       <DependentUpon>FrmProveedores.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmRecetas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmRecetas.Designer.cs">
+      <DependentUpon>FrmRecetas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmStockMovimientos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +138,7 @@
     <Compile Include="Models\Ingrediente.cs" />
     <Compile Include="Models\Productos.cs" />
     <Compile Include="Models\Proveedores.cs" />
+    <Compile Include="Models\Recetas.cs" />
     <Compile Include="Models\StockActualDto.cs" />
     <Compile Include="Models\StockMovimiento.cs" />
     <Compile Include="Models\Usuario.cs" />
@@ -150,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmProveedores.resx">
       <DependentUpon>FrmProveedores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmRecetas.resx">
+      <DependentUpon>FrmRecetas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmStockMovimientos.resx">
       <DependentUpon>FrmStockMovimientos.cs</DependentUpon>
